[metadata]
name = one_gui
version = 3.0
author = Finn Drabsch
author_email = fdrabsch@outlook.com
description = A GUI program for controlling typical hardware bench equipment
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3

[options]
include_package_data = True
package_dir=
    =src
packages = find_namespace:
python_requires = >=3.7
install_requires =

    enphase_ecdc>=5.30.58
    enphase_testlib>=1.0.51
    pyvisa>1.6
    PySide6==6.4.3;python_version<"3.8"
    PySide6;python_version>="3.8"
    pyqtgraph
    numpy

[options.packages.find]
where=src

# [options.package_data]
# ongui.config =
#     config.json

[options.entry_points]
gui_scripts =
    one_gui = one_gui:app.main